--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+  "install": "npm install --unsafe-perm",
+  "build": "tsc -b && vite build",
   },
   "dependencies": {
     "@mantine/core": "^7.12.0",
