--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-  "install": "npm install --unsafe-perm",
-  "build": "tsc -b && vite build",
+    "dev": "vite",
+    "build": "npm run build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@mantine/core": "^7.12.0",
